--- a/quiz-conjuntos.html
+++ b/quiz-conjuntos.html
@@ -62,8 +62,8 @@
         <span id="toastMessage"></span>
     </div>
 
-    <script src="assets/js/quiz.js"></script>
+    <script src="assets/js/quiz-conjuntos.js"></script>
 
-    
 </body>
+
 </html>
