--- a/quiz-funcoes.html
+++ b/quiz-funcoes.html
@@ -61,8 +61,8 @@
         <span id="toastMessage"></span>
     </div>
 
-    <script src="assets/js/quiz.js"></script>
-    
+    <script src="assets/js/quiz-funcoes.js"></script>
+
 </body>
 
 </html>
