--- a/quiz-relacoes.html
+++ b/quiz-relacoes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,7 +63,8 @@
     </div>
 
 
-    <script src="assets/js/quiz.js"></script>
-    
+    <script src="assets/js/quiz-relacoes.js"></script>
+
 </body>
+
 </html>
